--- a/redis/defaults/main.yml
+++ b/redis/defaults/main.yml
@@ -105,14 +105,14 @@ redis_sentinel_dir: /data/redis/sentinel_{{ redis_sentinel_port }}
 redis_sentinel_bind: 0.0.0.0
 redis_sentinel_port: 26379
 redis_sentinel_pidfile: /data/redis/run/redis/sentinel_{{ redis_sentinel_port }}.pid
-redis_sentinel_logfile: '"/data/redis/logs"'
+redis_sentinel_logfile: '"/data/redis/logs/sentinel_{{ redis_sentinel_port }}.log"'
 redis_sentinel_syslog_ident: sentinel_{{ redis_sentinel_port }}
 redis_sentinel_monitors:
   - name: master01
     host: localhost
     port: 6379
     quorum: 2
-    auth_pass: ant1r3z
+    auth_pass: 
     down_after_milliseconds: 30000
     parallel_syncs: 1
     failover_timeout: 180000
