--- a/redis/handlers/main.yml
+++ b/redis/handlers/main.yml
@@ -4,9 +4,11 @@
     name: "{{ redis_service_name }}"
     state: restarted
   when: redis_as_service
+  tags: restart_redis
 
 - name: "restart sentinel {{ redis_sentinel_port }}"
   service:
     name: sentinel_{{ redis_sentinel_port }}
     state: restarted
   when: redis_as_service
+  tags: restart_sentinel
