--- a/graphite/tasks/whisper.yml
+++ b/graphite/tasks/whisper.yml
@@ -2,5 +2,5 @@
 - name: Install Whisper
   command: "python setup.py install"
   args:
-    chdir: /usr/local/src/whisper
-    creates: /usr/local/bin/whisper-create.py
+    chdir: /tmp/whisper
+    creates: /tmp/data/graphite/bin/whisper-create.py
