--- a/graphite/tasks/main.yml
+++ b/graphite/tasks/main.yml
@@ -2,12 +2,16 @@
 
 - name: "Pull down source for Whisper, Carbon, and Graphite Web"
   git: repo={{ item.repo }}
-       dest=/data/graphite/src/{{ item.name }}
-       version={{ item.version }}
+       dest=/tmp/{{ item.name }}
+#       version={{ item.version }}
   with_items:
-    - { name: "whisper", repo: "https://github.com/graphite-project/whisper.git", version: "{{ graphite_whisper_version }}" }
-    - { name: "carbon", repo: "https://github.com/graphite-project/carbon.git", version: "{{ graphite_carbon_version }}" }
-    - { name: "graphite-web", repo: "https://github.com/graphite-project/graphite-web.git", version: "{{ graphite_web_version }}" }
+#    - { name: "whisper", repo: "https://github.com/graphite-project/whisper.git", version: "{{ graphite_whisper_version }}" }
+#    - { name: "carbon", repo: "https://github.com/graphite-project/carbon.git", version: "{{ graphite_carbon_version }}" }
+#    - { name: "graphite-web", repo: "https://github.com/graphite-project/graphite-web.git", version: "{{ graphite_web_version }}" }
+
+    - { name: "whisper", repo: "https://github.com/graphite-project/whisper.git" }
+    - { name: "carbon", repo: "https://github.com/graphite-project/carbon.git" }
+    - { name: "graphite-web", repo: "https://github.com/graphite-project/graphite-web.git"}
 
 - include: whisper.yml
 - include: carbon.yml
