--- a/rabbitmq/tasks/users.yml
+++ b/rabbitmq/tasks/users.yml
@@ -9,7 +9,7 @@
   rabbitmq_user:
     user: "{{ item.user }}"
     password: "{{ item.password }}"
-    vhost: "{{ item.vhost | default('/') }}"
+    vhost: "{{ item.vhost | default('/sensu') }}"
     configure_priv: "{{ item.configure_priv | default('.*') }}"
     read_priv: "{{ item.read_priv | default('.*') }}"
     write_priv: "{{ item.write_priv | default('.*') }}"
