--- a/rabbitmq/tasks/RedHat/install.yml
+++ b/rabbitmq/tasks/RedHat/install.yml
@@ -1,49 +1,34 @@
+    
+# Install rabbitmq and erlang
 ---
-#- name: import erlang rpm key
-#  rpm_key:
-#    key: https://packages.erlang-solutions.com/rpm/erlang_solutions.asc
 
-#- name: add erlang solutions repository
-#  yum_repository:
-#    name: erlang-solutions
-#    description: "{{ ansible_distribution }} $releasever - $basearch - Erlang Solutions"
-#    baseurl: https://packages.erlang-solutions.com/rpm/centos/$releasever/$basearch
-#    gpgcheck: True
-#    gpgkey: https://packages.erlang-solutions.com/rpm/erlang_solutions.asc
+- name: Copy erlang rpm file to server
+  copy:
+     src: "{{ erlang_version }}"
+     dest: "/tmp/{{ erlang_version }}"
+  when: erlang_install
+  tags: install
 
-#- name: install erlang
-#  yum:
-#    name: erlang
+- name: Copy rabbitmq rpm file to server
+  copy:
+     src: "{{ rabbitmq_version }}"
+     dest: "/tmp/{{ rabbitmq_version }}"
+  when: rabbitmq_install
+  tags: install 
 
-#- name: add convirt dependencies repository
-#  yum_repository:
-#    name: convirt-dep
-#    description: ConVirt Dependencies
-#    baseurl: "http://www.convirture.com/repos/deps/RHEL/{{ ansible_distribution_major_version }}.x"
-#    gpgcheck: False
-#    gpgkey: http://www.convirture.com/repos/convirture_packaging_pub_key
-#  when: rabbitmq_version | version_compare('3.6.2', '>=') and ansible_distribution_major_version in ['5','6']
-
-#- name: import rabbitmq rpm key
-#  rpm_key:
-#    key: https://www.rabbitmq.com/rabbitmq-release-signing-key.asc
-
-- name: download erlang package
-  get_url:
-    url: "https://s3-us-west-2.amazonaws.com/vamshi-production-yum/x86_64/erlang-20.2.2-1.el7.centos.x86_64.rpm"
-    dest: "/usr/src/"
- 
-- name: download rabbitmq package
-  get_url:
-#    url: "https://www.rabbitmq.com/releases/rabbitmq-server/v{{ rabbitmq_version.split('-')[0] }}/rabbitmq-server-{{ rabbitmq_version }}{% if rabbitmq_version | version_compare('3.6.6', '>=') %}.el{{ ansible_distribution_major_version }}{% endif %}.noarch.rpm"
-    url: "https://s3-us-west-2.amazonaws.com/vamshi-production-yum/x86_64/rabbitmq-server-3.7.2-1.el7.noarch.rpm"
-    dest: "/usr/src/"
-
-
-- name: install erlang
+- name: Install erlang package.
   yum:
-    name: "/usr/src/erlang-20.2.2-1.el7.centos.x86_64.rpm"
-
-- name: install rabbitmq
+     name: "/tmp/{{ erlang_version }}"
+     state: present
+  when: erlang_install
+  tags: install
+  
+- name: Install rabbitmq package.
   yum:
-    name: "/usr/src/rabbitmq-server-3.7.2-1.el7.noarch.rpm"
+     name: "/tmp/{{ rabbitmq_version }}"
+     state: present
+  when: rabbitmq_install
+  tags: install
+  
+
+  
