--- a/redis/tasks/download.yml
+++ b/redis/tasks/download.yml
@@ -16,23 +16,30 @@
     path: "/data/redis/src"
     state: directory
 
-- name: download redis (ansible 1.x)
-  get_url:
-    url: "{{ redis_download_url }}"
-    dest: /data/redis/src/redis-{{ redis_version }}.tar.gz
-    sha256sum: "{{ redis_checksum|default(omit) }}"
-  when:
-    - not redis_tarball
-    - ansible_version.major < 2
+#- name: download redis (ansible 1.x)
+#  get_url:
+#    url: "{{ redis_download_url }}"
+#    dest: /data/redis/src/redis-{{ redis_version }}.tar.gz
+#    sha256sum: "{{ redis_checksum|default(omit) }}"
+#  when:
+#    - not redis_tarball
+#    - ansible_version.major < 2
 
-- name: download redis (ansible 2.x)
-  get_url:
-    url: "{{ redis_download_url }}"
-    dest: /data/redis/src/redis-{{ redis_version }}.tar.gz
-    checksum: "{{ redis_checksum|default(omit) }}"
-  when:
-    - not redis_tarball
-    - ansible_version.major >= 2
+#- name: download redis (ansible 2.x)
+#  get_url:
+#    url: "{{ redis_download_url }}"
+#    dest: /data/redis/src/redis-{{ redis_version }}.tar.gz
+#    checksum: "{{ redis_checksum|default(omit) }}"
+#  when:
+#    - not redis_tarball
+#    - ansible_version.major >= 2
+    
+- name: download and copy redis file to server
+  copy:
+     src: "../files/{{ redis_version_file }}"
+     dest: "/data/redis/src/{{ redis_version_file }}"
+  when: redis_install
+  tags: install
 
 - name: upload redis
   copy:
@@ -42,7 +49,7 @@
 
 - name: extract redis tarball
   unarchive:
-    src: /data/redis/src/redis-{{ redis_version }}.tar.gz
+    src: /data/redis/src/redis-4.0.8.tar.gz
     dest: /data/redis/src
     creates: /data/redis/src/redis-{{ redis_version }}/Makefile
     copy: no
