--- a/uchiwa-1/defaults/main.yml
+++ b/uchiwa-1/defaults/main.yml
@@ -33,16 +33,16 @@ sensu_default_endpoint:
   ssl: false
   insecure: true
   port: 4567
-  user: ''
-  pass: ''
+  user: 'admin'
+  pass: 'secret'
   path: ''
   timeout: 5
 
 # Default uchiwa config
 host: 0.0.0.0
 port: 3000
-user: ''
-pass: ''
+user: 'admin'
+pass: 'secret'
 refresh: 5
 users: []
 auth: {}
